Changed solution folder name

--- a/Alvianda.Software.Portals.COMD/Shared/MainLayout.razor
+++ b/Alvianda.Software.Portals.COMD/Shared/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@using Alvianda.Software.Portals.COMP.Shared
+@using Alvianda.Software.Portals.COMD.Shared
 
 <div class="sidebar">
     <NavMenu />
