--- a/Alvianda.Software.Portals.COMD/_Imports.razor
+++ b/Alvianda.Software.Portals.COMD/_Imports.razor
@@ -4,8 +4,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.JSInterop
-@using Alvianda.Software.Portals.COMP
-@using Alvianda.Software.Portals.COMP.Shared
-@using Alvianda.Software.Portals.COMP.Data
+@using Alvianda.Software.Portals.COMD
+@using Alvianda.Software.Portals.COMD.Shared
+@using Alvianda.Software.Portals.COMD.Data
 @using System.Net.Http.Json
 @using ChartJs.Blazor;
